# D4AC

./: .gitignore  Changelog.md  README-ja.md  README.md  d4ac-0.1.0-py3-none-any.whl  d4ac-0.1.1-py3-none-any.whl  pyproject.toml
d4ac/: config-template.yml  d4ac.py
d4ac/d4ac_main/: controllers.py  d4ac_main.py  server.py
d4ac/d4ac_main/templates/: index.html
d4ac/dialog_server/: dialbb_d4ac.py  dialog_server.py  sunaba_d4ac.py  test_dialog.py
d4ac/facepp/: facepp_client.py
d4ac/frontend/: README.md  install.bat  install.sh  package-lock.json  package.json
d4ac/frontend/src/: main.ts
d4ac/frontend/src/components/: SystemUtterance.vue  UserUtterance.vue  UtteranceImage.vue
d4ac/frontend/src/router/: index.ts
d4ac/frontend/src/views/: DialogMainGoogle.vue  dialogmixin.js
d4ac/sampleExtServer/: README.md  main.py  urls.py
d4ac/util/: logger.py
d4ac/video_input/: video_input.py
dialbb_nc_sample/d4ac_sample_202503/: config.yml
docs/: developer-document.md  facepp.md
docs/images/: arch.drawio
sample_apps/dialbb_sample_202503/d4ac_sample/: scenario.xlsx
src/: config-template.yml  d4ac.py
src/d4ac_main/: README.md  controllers.py  d4ac_main.py  mqtt.py
src/d4ac_main/static/css/: app.8fb099ef.css
src/d4ac_main/static/js/: app.030b70f9.js  app.030b70f9.js.map  app.c6e39942.js  app.c6e39942.js.map  chunk-vendors.0e34b336.js
src/d4ac_main/templates/: index.html
src/dialog_server/: dialbb_d4ac.py  dialog_server.py  dummy_dialog.py  sunaba_d4ac.py  test_dialog_template.py
src/facepp/: facepp_client.py
src/frontend/: package-lock.json  vue.config.js
src/frontend/public/: index.html
src/frontend/src/: App.vue
src/frontend/src/store/: index.ts
src/frontend/src/views/: DialogMainAmazon.vue  DialogMainText.vue  dialogmixin.js
src/mediapipe/: mesh.py
src/sampleExtServer/: README.md  main.py  urls.py
src/user_status/: README.md  user_statues_test.py  user_status.py  user_status_estimator.py
src/util/: logger.py
src/video_input/: video_input.py
