[tool.poetry]
name = "d4ac"
version = "1.0.2"
description = ""
authors = ["Mikio Nakano <mikio.nakano@c4a.jp>"]
packages = [
    { include = "d4ac/*.py"},
    { include = "d4ac/d4ac_main/*.py"},
   { include = "d4ac/facepp/*.py" },
    { include = "d4ac/dialog_server/*.py" },
    {include = "d4ac/mediapipe/*.py"},
    {include = "d4ac/util/*.py"},
    {include = "d4ac/video_input/*.py" },
    {include = "d4ac/user_status/*.py" }
]
exclude =["d4ac/android/*", "d4ac/frontend/*" ]
include = ["d4ac/d4ac_main/static/css/*.css",
"d4ac/config-template.yml",
"d4ac/d4ac_main/static/images/*" ,
"d4ac/d4ac_main/static/js/*" ,
"d4ac/d4ac_main/templates/*" ]
 

[tool.poetry.dependencies]
python = "^3.9"
aiofiles="^0.6.0"
altgraph="^0.17"
certifi="^2025.1.31"
click="^8.1.8"
fastapi="^0.115.12"
future="^0.18.2"
h11="^0.14.0"
idna="^3.10"
importlib-metadata="^3.9.0"
imutils="^0.5.4"
Jinja2="^3.1.5"
MarkupSafe="^3.0.2"
numpy="^1.24.4"
opencv-python="^4.5.1.48"
paho-mqtt="^1.5.1"
pefile="2019.4.18"
pip-licenses="^3.3.1"
PTable="^0.9.2"
pydantic="^2.10.6"
python-aiml="^0.9.3"
pywin32-ctypes="^0.2.0"
PyYAML="^6.0"
starlette="^0.46.1"
typing-extensions="^4.12.2"
urllib3="^2.3.0"
uvicorn="^0.34.0"
zipp="^3.4.1"
pandas="^2.2.3"
openpyxl="^3.0.9"
TkEasyGUI = "^0.2.73"
requests = "^2.28.1"
azure-cognitiveservices-vision-face = "^0.6.0"
mediapipe =  { version = "^0.10.0" ,markers = "sys_platform == 'win32'" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
d4ac = 'd4ac.d4ac:main'
